Fix follow value in UserList.toDictionary and z-index on UserList (must be above VisionDetailsModal)

--- a/awesome/static/css/index.less
+++ b/awesome/static/css/index.less
@@ -829,6 +829,10 @@
 
     .CursorZoomOut;
 }
+// This modal must be above the vision details modal
+#UserListModal {
+    z-index: 5001;
+}
 
 #VisionInformation {
     width: @VISION_DETAILS_WIDTH;
